<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/titreBienvenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titreBienvenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputPrenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/prenomEtudiant"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNom" />

    <EditText
        android:id="@+id/inputAge"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/inputPrenom"
        app:layout_constraintTop_toBottomOf="@+id/inputPrenom" />

    <EditText
        android:id="@+id/inputCIN"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/cin"
        android:inputType="text|textCapCharacters"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/inputPrenom"
        app:layout_constraintTop_toBottomOf="@+id/inputPrenom" />

    <EditText
        android:id="@+id/inputNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nomEtudiant"
        android:inputType="text|textCapCharacters"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titreBienvenu" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAbr" />

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputEcole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nomEcole"
        android:inputType="text|textCapWords"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/inputCIN"
        app:layout_constraintStart_toStartOf="@+id/inputAge"
        app:layout_constraintTop_toBottomOf="@+id/inputAge" />

    <EditText
        android:id="@+id/inputAbr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/abr"
        android:inputType="text|textCapCharacters"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/inputEcole" />

    <Button
        android:id="@+id/inputUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPass"
        android:onClick="addUser"/>

</androidx.constraintlayout.widget.ConstraintLayout>